<resources>
    <string name="app_name">NutriFitApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up!</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nutrition">Nutrition</string>
    <string-array name="activity_levels">
        <item>Sedentary(little or no exercise)</item>
        <item>Lightly Active (1–3 exercise per week)</item>
        <item>Moderately active (3–5 exercise per week)</item>
        <item>Very active (6–7 exercise per week)</item>
        <item>Very high activity (physical job, intense exercise)</item>
    </string-array>

    <string-array name="goal_options">
        <item>Lose weight</item>
        <item>Gain weight</item>
    </string-array>

</resources>